<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/RelativeLayout1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:columnCount="1"
                android:orientation="vertical" >

    <TextView
            android:id="@+id/textHeader1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/textHeader1String" />

    <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_alignLeft="@+id/textHeader1"
            android:layout_below="@+id/textHeader1"
            android:text="@string/disconnected" />

    <Button
            android:id="@+id/button2"
            android:layout_width="124dp"
            android:layout_height="49dp"
            android:layout_alignTop="@+id/spinner1"
            android:layout_toRightOf="@+id/spinner1"
            android:text="@string/buttonText2" />

    <Spinner
            android:id="@+id/spinner1"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_alignLeft="@+id/button1"
            android:layout_below="@+id/button1"
            android:entries="@array/spinner1_array"
            android:prompt="@string/spinner1_prompt" />



    <TextView
            android:id="@+id/debugText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/button2"
            android:layout_below="@id/button2"
            android:text="@string/debug1_default" />





</RelativeLayout>
